CTA & layout - Prevent linebreak in CTA
And minimal width for layout

--- a/src/components/CTA/CTA.css
+++ b/src/components/CTA/CTA.css
@@ -5,6 +5,7 @@
   box-shadow: rgb(0 0 0 / 25%) 10px 10px 10px 0px;
   transition: box-shadow 100ms ease-out;
   box-sizing: content-box;
+  white-space: nowrap;
 }
 
 #menu .CTA {
