--- a/src/features/services/Services.css
+++ b/src/features/services/Services.css
@@ -2,6 +2,7 @@
 
 h1#title-main span {
   display: block;
+  white-space: nowrap;
 }
 
 /** WORDPRESS TEXT **/
